# stereo_vo

./: CMakeLists.txt  README.md
config/: default.ini  indoor.ini
include/: camera.h  coarse_track_g2o.h  common.h  depth_filter.h  direct_pose_estimate.h  frame.h  g2o_types.h  local_map.h  map.h  map_point.h  odometry.h  window_ba.h
src/: CMakeLists.txt  camera.cpp  coarse_track_g2o.cpp  depth_filter.cpp  direct_pose_estimate.cpp  frame.cpp  g2o_types.cpp  local_map.cpp  map.cpp  map_point.cpp  odometry.cpp  window_ba.cpp
test/: CMakeLists.txt  run_vo.cpp
